Added some JVM flags to allow reflection to work with JDK 14+